; ModuleID = '/home/carl/AnghaBench/capstone/suite/cstest/src/extr_main.c_test_MC.c'
source_filename = "/home/carl/AnghaBench/capstone/suite/cstest/src/extr_main.c_test_MC.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@e_flag = common dso_local global i32 0, align 4
@mc_mode = common dso_local global i32 0, align 4
@list_lines = common dso_local global i64* null, align 8
@counter = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8**)* @test_MC to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_MC(i8** %0) #0 {
  %2 = alloca i8**, align 8
  store i8** %0, i8*** %2, align 8
  %3 = load i32, i32* @e_flag, align 4
  %4 = icmp eq i32 %3, 1
  br i1 %4, label %5, label %16

5:                                                ; preds = %1
  %6 = load i8**, i8*** %2, align 8
  %7 = load i8*, i8** %6, align 8
  %8 = bitcast i8* %7 to i32*
  %9 = load i32, i32* @mc_mode, align 4
  %10 = load i64*, i64** @list_lines, align 8
  %11 = load i64, i64* @counter, align 8
  %12 = getelementptr inbounds i64, i64* %10, i64 %11
  %13 = load i64, i64* %12, align 8
  %14 = add nsw i64 %13, 3
  %15 = call i32 @test_single_MC(i32* %8, i32 %9, i64 %14)
  br label %26

16:                                               ; preds = %1
  %17 = load i8**, i8*** %2, align 8
  %18 = load i8*, i8** %17, align 8
  %19 = bitcast i8* %18 to i32*
  %20 = load i32, i32* @mc_mode, align 4
  %21 = load i64*, i64** @list_lines, align 8
  %22 = load i64, i64* @counter, align 8
  %23 = getelementptr inbounds i64, i64* %21, i64 %22
  %24 = load i64, i64* %23, align 8
  %25 = call i32 @test_single_MC(i32* %19, i32 %20, i64 %24)
  br label %26

26:                                               ; preds = %16, %5
  ret void
}

declare dso_local i32 @test_single_MC(i32*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
